@@ -1,35 +1,55 @@
+package com.example.demo.service.impl;
+
+import com.example.demo.entity.Crop;
+import com.example.demo.entity.Fertilizer;
+import com.example.demo.exception.BadRequestException;
+import com.example.demo.repository.CropRepository;
+import com.example.demo.repository.FertilizerRepository;
+import com.example.demo.service.CatalogService;
+import com.example.demo.util.ValidationUtil;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+
+import java.util.List;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+
 @Service
 @RequiredArgsConstructor
 public class CatalogServiceImpl implements CatalogService {
 
-    private final CropRepository cropRepo;
-    private final FertilizerRepository fertRepo;
+    private final CropRepository cropRepository;
+    private final FertilizerRepository fertilizerRepository;
 
+    @Override
     public Crop addCrop(Crop crop) {
-        if (crop.getSuitablePHMin() > crop.getSuitablePHMax())
-            throw new BadRequestException("PH min invalid");
-
-        if (!ValidationUtil.validSeason(crop.getSeason()))
+        if (crop.getSuitablePHMin() > crop.getSuitablePHMax()) {
+            throw new BadRequestException("PH min");
+        }
+        if (!ValidationUtil.validSeason(crop.getSeason())) {
             throw new BadRequestException("Invalid season");
-
-        return cropRepo.save(crop);
+        }
+        return cropRepository.save(crop);
     }
 
-    public Fertilizer addFertilizer(Fertilizer f) {
-        if (!f.getNpkRatio().matches("\\d+-\\d+-\\d+"))
-            throw new BadRequestException("Invalid NPK");
-
-        return fertRepo.save(f);
+    @Override
+    public Fertilizer addFertilizer(Fertilizer fertilizer) {
+        if (!Pattern.matches("\\d+-\\d+-\\d+", fertilizer.getNpkRatio())) {
+            throw new BadRequestException("NPK");
+        }
+        return fertilizerRepository.save(fertilizer);
     }
 
+    @Override
     public List<Crop> findSuitableCrops(Double ph, Double water, String season) {
-        return cropRepo.findSuitableCrops(ph, water, season);
+        return cropRepository.findSuitableCrops(ph, water, season);
     }
 
-    public List<Fertilizer> findFertilizersForCrops(List<String> crops) {
-        return fertRepo.findAll().stream()
-                .filter(f -> crops.stream()
+    @Override
+    public List<Fertilizer> findFertilizersForCrops(List<String> cropNames) {
+        return fertilizerRepository.findAll().stream()
+                .filter(f -> cropNames.stream()
                         .anyMatch(c -> f.getRecommendedForCrops().contains(c)))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
